--- a/views/index.jade
+++ b/views/index.jade
@@ -325,8 +325,8 @@ block content
                                                             a(href='images/TR/TR1.png', title='Opis1', data-gallery='')
                                                                 img.img-thumbnail(src='images/TR/TR1.png', alt='01TG')
                                                         .col-md-5.nopadding
-                                                            a(href='images/TR/TR2.png', title='Opis2', data-gallery='')
-                                                                img.img-thumbnail(src='images/TR/TR2.png', alt='01TG')
+                                                            a(href='images/TR/TR2.jpg', title='Opis2', data-gallery='')
+                                                                img.img-thumbnail(src='images/TR/TR2.jpg', alt='01TG')
                                                     .row
                                                         .col-md-5.nopadding
                                                             a(href='images/TR/TR3.png', title='Opis3', data-gallery='')
@@ -366,8 +366,8 @@ block content
                                                 #links2
                                                     .row
                                                         .col-md-5.nopadding
-                                                            a(href='images/FW/01FW.png', title='Opis1', data-gallery='')
-                                                                img.img-thumbnail(src='images/FW/01FW.png', alt='01TG')
+                                                            a(href='images/FW/01FW.jpg', title='Opis1', data-gallery='')
+                                                                img.img-thumbnail(src='images/FW/01FW.jpg', alt='01TG')
                                                         .col-md-5.nopadding
                                                             a(href='images/FW/02FW.png', title='Opis2', data-gallery='')
                                                                 img.img-thumbnail(src='images/FW/02FW.png', alt='01TG')
