--- a/views/index.jade
+++ b/views/index.jade
@@ -180,6 +180,18 @@ block content
                                                 .timeline-icon.timeline-icon-hide-border
                                                     i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
                                                 .timeline-content
+                                                    h4 Profesor Nadzwyczajny Wyższej Szkoły Morskiej w Szczecinie
+                                                    .timeline-date 1991–1999
+                                            .timeline-block
+                                                .timeline-icon.timeline-icon-hide-border
+                                                    i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
+                                                .timeline-content
+                                                    h4 Profesor zwyczajny Wyższej Szkoły Morskiej w Szczecinie (od 2004 przemianowaną na Akademię Morską w Szczecinie)
+                                                    .timeline-date 1991-
+                                            .timeline-block
+                                                .timeline-icon.timeline-icon-hide-border
+                                                    i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
+                                                .timeline-content
                                                     h4 Rektor Politechniki Szczecińskiej
                                                     .timeline-date 1993–1999
                                             .timeline-block
