--- a/views/index.jade
+++ b/views/index.jade
@@ -186,12 +186,6 @@ block content
                                                 .timeline-icon.timeline-icon-hide-border
                                                     i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
                                                 .timeline-content
-                                                    h4 Profesor zwyczajny Wyższej Szkoły Morskiej w Szczecinie (od 2004 przemianowaną na Akademię Morską w Szczecinie)
-                                                    .timeline-date 1991-
-                                            .timeline-block
-                                                .timeline-icon.timeline-icon-hide-border
-                                                    i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
-                                                .timeline-content
                                                     h4 Rektor Politechniki Szczecińskiej
                                                     .timeline-date 1993–1999
                                             .timeline-block
@@ -206,6 +200,12 @@ block content
                                                 .timeline-content#functionse
                                                     h4 Dziekan Wydziału Mechanicznego
                                                     .timeline-date 1999-2005
+                                            .timeline-block
+                                                .timeline-icon.timeline-icon-hide-border
+                                                    i.fa.fa-graduation-cap.fa-lg(style='color:#c23b22')
+                                                .timeline-content
+                                                    h4 Profesor zwyczajny Wyższej Szkoły Morskiej w Szczecinie (od 2004 przemianowaną na Akademię Morską w Szczecinie)
+                                                    .timeline-date 1999-do chwili obecnej
                                             .timeline-block
                                                 .timeline-icon.timeline-icon-hide-border
                                                     i.fa.fa-cog.fa-lg(style='color:#0033cc')
