--- a/views/index.jade
+++ b/views/index.jade
@@ -229,7 +229,7 @@ block content
                                                     i.fa.fa-cog.fa-lg(style='color:#0033cc')
                                                 .timeline-content
                                                     h4 Przewodniczący Rady Nadzorczej Zakładu Unieszkodliwiania Odpadów w Szczecinie
-                                                    .timeline-date 2010-
+                                                    .timeline-date 2010-do chwili obecnej
                 .row
                     .col-md-6
                         .panel.panel-default
