--- a/views/index.jade
+++ b/views/index.jade
@@ -552,7 +552,7 @@ block content
                                                 font(size='3') Tomasz Wróblewski, Małgorzata Jarosińska, Małgorzata Abramowicz,
                                                 b
                                                     font(size='3')  Stefan Berczyński:
-                                                font(size='3')  Experimental Validation of the Use  of Energy Tranfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
+                                                font(size='3')  Experimental Validation of the Use  of Energy Transfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
                                                 p
                                                     font(size='3') Journal of Theoretical and Applied Mechanics, 2016 (przyjęty do druku)
                                     li
@@ -562,7 +562,7 @@ block content
                                                 b
                                                     font(size='3')  Stefan Berczyński,
                                                 font(size='3')  Tomasz Wróblewski:
-                                                font(size='3')  Experimental Validation of the Use  of Energy Tranfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
+                                                font(size='3')  Experimental Validation of the Use  of Energy Transfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
                                                 p
                                                     font(size='3') Journal of Theoretical and Applied Mechanics, 2016 (przyjęty do druku)
                                     li
@@ -572,7 +572,7 @@ block content
                                                 b
                                                     font(size='3')  Stefan Berczyński,
                                                 font(size='3')  Yu.A. Kravtsov:
-                                                font(size='3')  Gaussian Beam Diraction and Self-Focusing in Weakly Anisotropic and Dissipative Nonlinear Plasma
+                                                font(size='3')  Gaussian Beam Difraction and Self-Focusing in Weakly Anisotropic and Dissipative Nonlinear Plasma
                                                 p
                                                     font(size='3') Acta Physica Polonica A, vol. 125 (2014), s. 39 – 45;
                                     li
