nowy_prog wyborczy 2

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     .row
         .col-md-3.nopadding
             #stick
-                img.img-responsive(src='images/gabinet_updated.jpg', alt='Cinque Terre')
+                img.img-responsive(src='images/stefan_berczynski.jpg', alt='Cinque Terre')
 
                 ul.nav.nav-pills.nav-stacked.text-right
                     li#star
