usunievie prog wyborczego

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,7 +38,7 @@ block content
                     .hh1#sstart Prof. dr hab. inż. dr h.c.
                     .hh0 Stefan Berczyński
                     .h4 Dziekan Wydziału Inżynierii Mechanicznej i Mechatroniki
-                    .button.btn.btn-lg.btn-primary(type='button' onClick="window.open('documents/program_wyborczy.pdf')") Program wyborczy
+                    //.button.btn.btn-lg.btn-primary(type='button' onClick="window.open('documents/program_wyborczy.pdf')") Program wyborczy
                     .footm
                         hr
                         .row
