--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ block content
                 .titlecont
                     .hh1#sstart Prof. dr hab. inż. dr h.c.
                     .hh0 Stefan Berczyński
-                    .h4 Dziekan Wydziału Inżynierii Mechanicznej i Mechatroniki
+                    .h4 Dyrektor Instytutu Technologii Mechanicznej na Wydziale Inżynierii Mechanicznej i Mechatroniki
                     //.button.btn.btn-lg.btn-primary(type='button' onClick="window.open('documents/program_wyborczy.pdf')") Program wyborczy
                     .footm
                         hr
