dodana dydktyka (nie działa)

--- a/views/index.jade
+++ b/views/index.jade
@@ -686,7 +686,8 @@ block content
                                         a
                                             .article
                                                 b
-                                                    font(size='4') Statystyka Matematyczna
+                                                a(href='/documents/Statystyka_matematyczna.pdf')
+                                                    font(size='5') Statystyka Matematyczna
     script.
         $('.owl-carousel').owlCarousel({
             items: 4,
