dodane nowe artykły

--- a/views/index.jade
+++ b/views/index.jade
@@ -551,24 +551,109 @@ block content
                                     p.hcard Najnowsze Artykuły
                                 ul.nav.nav-pills.nav-stacked
                                     li
-                                        a
+                                        a(href='http://yadda.icm.edu.pl/yadda/element/bwmeta1.element.baztech-02f8fb94-42e3-441c-886c-ddaaa620cfc7/c/dudzinska_bachtiak-radka_a_study_1_2018.pdf')
+                                            .article
+                                                font(size='3') Sara Dudzińska, Emilia Bachtiak-radka, Daniel Grochała,
+                                                b
+                                                    font(size='3')  Stefan Berczyński:
+                                                font(size='3')  A study on technological properties of metallic surfaces marked with Data Matrix codes in laser technology
+                                                p
+                                                    font(size='3') Problemy Eksploatacji. Maintenance Problems, Tom: 108, Zeszyt: 1, Strony: 91-101, 2018
+
+                                    li
+                                        a(href='http://jmcm.itee.radom.pl/images/pe_2018/pe_3_2018/PE_3_2018_s_071_078.pdf')
+                                            .article
+                                                font(size='3') Paweł Dunaj, Bartosz Powałka, Tomasz Okulik,
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3') Marcin Chodźko:
+                                                font(size='3')  Modelling steel beams filled with a composite material
+                                                p
+                                                    font(size='3') Problemy Eksploatacji. Maintenance Problems, Tom: 110, Zeszyt: 3, Strony: 71-78, 2018
+
+                                    li
+                                        a(href='http://jmcm.itee.radom.pl/index.php/en/component/content/article/2-uncategorised/43-1-2018')
+                                            .article
+                                                font(size='3') Daniel Grochała,
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3') Zenon Grządziel:
+                                                font(size='3')  Testing of the state of stresses after finish burnishing items
+                                                p
+                                                    font(size='3') Problemy Eksploatacji. Maintenance Problems, Tom: 108, Zeszyt: 1, Strony: 45-52, 2018
+
+                                    li
+                                        a(href='http://ptmts.org.pl/jtam/index.php/jtam/article/view/2589')
+                                            .article
+                                                font(size='3') Tomasz Wróblewski, Małgorzata Jarosińska, Małgorzata Abramowicz,
+                                                b
+                                                    font(size='3')  Stefan Berczyński:
+                                                font(size='3')  Experimental validation of the use of energy transfer ratio (ETR) for damage diagnosis of steel-concrete composite beams
+                                                p
+                                                    font(size='3') Journal of Theoretical and Applied Mechanics, Tom: 55, Zeszyt: 1, Strony: 241-252, 2017
+
+                                    li
+                                        a(href='https://doi.org/10.1016/j.acme.2017.04.009')
+                                            .article
+                                                font(size='3') Daniel Grochała,
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3') Zenon Grządziel:
+                                                font(size='3')  Modeling of burnishing thermally toughened X42CrMo4 steel with a ceramic ZrO2 ball
+                                                p
+                                                    font(size='3') Archives of Civil and Mechanical Engineering, Tom: 17, Zeszyt: 4, Strony: 1011-1018, 2017
+
+                                    li
+                                        a(href='https://doi.org/10.1515/mspe-2017-0020')
+                                            .article
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3')  Daniel Grochała:
+                                                font(size='3')  Modeling of surface geometric structure state after integratedformed milling and finish burnishing
+                                                p
+                                                    font(size='3') Management Systems in Production Engineering, Tom: 25, Zeszyt: 2, Strony: 131-136, 2017
+
+                                    li
+                                        a(href='http://ptmts.org.pl/jtam/index.php/jtam/article/view/4158/2625')
+                                            .article
+                                                font(size='3') Małgorzata Abramowicz,
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3')  Tomasz Wróblewski:
+                                                font(size='3')  Parameter estimation of a discrete model of a reinforced concrete slab
+                                                p
+                                                    font(size='3') Journal of Theoretical and Applied Mechanics, Tom: 55, Zeszyt: 2, Strony: 407-420, 2017
+
+                                    li
+                                        a(href='http://iopscience.iop.org/article/10.1088/2051-672X/aa539f/meta')
+                                            .article
+                                                font(size='3') Emilia Bachtiak-Radka, Sara Dudzińska, Daniel Grochała,
+                                                b
+                                                    font(size='3')  Stefan Berczyński,
+                                                font(size='3')  Wiesław Olszak:
+                                                font(size='3')  The influence of CNC milling and ball burnishing on shaping complex 3D surfaces
+                                                p
+                                                    font(size='3') Surface Topography: Metrology and Properties, Volume 5, Number 1, 2017
+
+                                    li
+                                        a(href='http://www.mechanik.media.pl/artykuly/wplyw-warunkow-otoczenia-i-sposobu-akwizycji-chmury-punktow-z-wykorzystaniem-optycznych-systemow-pomiarowych-na-wartosci-parametrow-sgp.html')
+                                            .article
+                                                font(size='3') Emilia Bachtiak-Radka, Sara Dudzińska, Daniel Grochała,
+                                                b
+                                                    font(size='3')  Stefan Berczyński:
+                                                font(size='3')  Wpływ warunków otoczenia i sposobu akwizycji chmury punktów z wykorzystaniem optycznych systemów pomiarowych na wartości parametrów SGP
+                                                p
+                                                    font(size='3') Mechanik nr 08/09/2017, pp. 748-752
+                                    li
+                                        a(href='http://ptmts.org.pl/jtam/index.php/jtam/article/view/2589')
                                             .article
                                                 font(size='3') Tomasz Wróblewski, Małgorzata Jarosińska, Małgorzata Abramowicz,
                                                 b
                                                     font(size='3')  Stefan Berczyński:
                                                 font(size='3')  Experimental Validation of the Use  of Energy Transfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
                                                 p
-                                                    font(size='3') Journal of Theoretical and Applied Mechanics, 2016 (przyjęty do druku)
-                                    li
-                                        a
-                                            .article
-                                                font(size='3') Małgorzata Abramowicz,
-                                                b
-                                                    font(size='3')  Stefan Berczyński,
-                                                font(size='3')  Tomasz Wróblewski:
-                                                font(size='3')  Experimental Validation of the Use  of Energy Transfer Ratio (ETR) for damage diagnosis  in steel-concrete  composite beams
-                                                p
-                                                    font(size='3') Journal of Theoretical and Applied Mechanics, 2016 (przyjęty do druku)
+                                                    font(size='3') Journal of Theoretical and Applied Mechanics, 55, 1, pp. 241-252, 2017
+
                                     li
                                         a(href='http://przyrbwn.icm.edu.pl/APP/PDF/125/a125z1p07.pdf')
                                             .article
