dodane nowe artykły 2019/2020

--- a/views/index.jade
+++ b/views/index.jade
@@ -551,6 +551,62 @@ block content
                                     p.hcard Najnowsze Artykuły
                                 ul.nav.nav-pills.nav-stacked
                                     li
+                                        a(href='https://www.mdpi.com/1996-1944/13/9/2125')
+                                            .article
+                                                font(size='3') P. Dunaj,
+                                                b
+                                                    font(size='3')  S. Berczyński,
+                                                font(size='3') K. Miądlicki, I. Irska, B. Niesterowicz:
+                                                font(size='3')  Increasing Damping of Thin-Walled Structures Using Additively Manufactured Vibration Eliminators
+                                                p
+                                                    font(size='3') Materials, Tom: 13, Zeszyt: 9 , Strony: 1-17, 2020
+                                    li
+                                        a(href='https://www.mdpi.com/1996-1944/13/7/1630')
+                                            .article
+                                                font(size='3') P. Dunaj,
+                                                b
+                                                    font(size='3')  S. Berczyński,
+                                                font(size='3') M. Chodźko, B. Niesterowicz:
+                                                font(size='3')  Finite Element Modeling of the Dynamic Properties of Composite Steel–Polymer Concrete Beams
+                                                p
+                                                    font(size='3') Materials, Tom: 13, Zeszyt: 7, Strony: 1-19,, 2020
+                                    li
+                                        a(href='https://www.sciencedirect.com/science/article/pii/S026382232 0302038')
+                                            .article
+                                                font(size='3') P. Dunaj,
+                                                b
+                                                    font(size='3')  S. Berczyński,
+                                                font(size='3') M. Chodźko:
+                                                font(size='3')  Method of modeling steel-polymer concrete frames for machine tools
+                                                p
+                                                    font(size='3') Composite Structures, Tom: 242, Strony: 1-12, 2020
+
+
+
+
+                                    li
+                                        a(href='https://www.mdpi.com/1996-1944/12/7/1179')
+                                            .article
+                                                font(size='3') D. Grochała,
+                                                b
+                                                    font(size='3')  S. Berczyński,
+                                                font(size='3') Z. Grządziel:
+                                                font(size='3')  Analysis of Surface Geometry Changes after Hybrid Milling and Burnishing by Ceramic Ball
+                                                p
+                                                    font(size='3') Materials, Tom: 12, Zeszyt: 7, Strony: 2-12, 2019
+
+                                    li
+                                        a(href='https://doi.org/10.1016/j.acme.2019.06.005')
+                                            .article
+                                                font(size='3') P. Dunaj,
+                                                b
+                                                    font(size='3')  S. Berczyński,
+                                                font(size='3') P. Pawełko, M. Chodźko, Z. Grządziel:
+                                                font(size='3')  Static condensation in modeling roller guides with preload
+                                                p
+                                                    font(size='3') Archives of Civil and Mechanical Engineering, Tom: 19, Zeszyt: 4, Strony: 1072-1082, 2019
+
+                                    li
                                         a(href='http://yadda.icm.edu.pl/yadda/element/bwmeta1.element.baztech-02f8fb94-42e3-441c-886c-ddaaa620cfc7/c/dudzinska_bachtiak-radka_a_study_1_2018.pdf')
                                             .article
                                                 font(size='3') Sara Dudzińska, Emilia Bachtiak-radka, Daniel Grochała,
